--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ammo.js": "0.0.10",
     "express": "^4.15.3",
+    "stats.js": "^0.17.0",
     "three": "^0.86.0"
   },
   "devDependencies": {
